bugfix for scrollbars

--- a/nicerapp/domainConfigs/localhost_v2/index.css
+++ b/nicerapp/domainConfigs/localhost_v2/index.css
@@ -44,8 +44,8 @@ img.bg_last {
     display : none;
     /*width : calc(98vw - 15px);
     height: calc(100vh - 120px);*/
-    width : 100%;
-    height : 100%;
+    width : calc(100% - 20px);
+    height : calc(100% - 20px);
     z-index : 1100;
     /*opacity : 0.0001;*/
 }
