--- a/nicerapp/domainConfigs/localhost_v2/index.light.css
+++ b/nicerapp/domainConfigs/localhost_v2/index.light.css
@@ -19,6 +19,54 @@ a:visited {
     border-radius : 15px;
 }
 
+.vividScrollpane {
+    overflow : auto;
+}
+.vividScrollpane::-webkit-scrollbar {
+  width: 1rem;
+}
+.vividScrollpane::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background : rgba(0,0,0,0.5);
+}
+.vividScrollpane::-webkit-scrollbar-button:vertical:decrement {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  color : white;
+  padding : 0;
+  margin : 0;
+  border-radius : 10px 10px 0px 0px;
+  background : url('/nicerapp/siteMedia/vividDialog/frame_e02_001.png') center;
+}
+.vividScrollpane::-webkit-scrollbar-button:vertical:increment {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  padding : 0;
+  margin : 0;
+  color : white;
+  border-radius : 0px 0px 10px 10px;
+  background : url('/nicerapp/siteMedia/vividDialog/frame_e03_001.png') center;
+}
+.vividScrollpane::-webkit-scrollbar-button:horizontal:decrement {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  color : white;
+  padding : 0;
+  margin : 0;
+  border-radius : 10px 0px 0px 10px;
+  background : url('/nicerapp/siteMedia/vividDialog/frame_e06_001.png') center;
+}
+.vividScrollpane::-webkit-scrollbar-button:horizontal:increment {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  padding : 0;
+  margin : 0;
+  color : white;
+  border-radius : 0px 10px 10px 0px;
+  background : url('/nicerapp/siteMedia/vividDialog/frame_e07_001.png') center;
+}
+.vividScrollpane::-webkit-scrollbar-thumb {
+  background : url('/nicerapp/siteMedia/backgrounds/tiled/active/blue/blue174.jpg') repeat;
+  border-radius : 20px;
+}
+
+/*
 .vividDialogContent::-webkit-scrollbar {
   width: 1rem;
 }
@@ -61,7 +109,7 @@ a:visited {
 .vividDialogContent::-webkit-scrollbar-thumb {
   background : url('/nicerapp/siteMedia/backgrounds/tiled/active/blue/blue170.jpg') repeat;
   border-radius : 20px;
-}
+}*/
 
 .vividButton[theme="light"] {
     border : 3px ridge rgba(255,255,255,0.7);
